# bioinformatics-algorithms

./: README.md  utils.py
ch01/: E01A_pattern_count.py  E01B_frequent_words.py  E01B_most_frequent_kmer.py  E01C_reverse_complement.py  E01D_pattern_matching.py  E01E_clump_finding.py  E01F_minimum_skew.py  E01G_hamming_distance.py  E01H_approximate_pattern_matching.py  E01I_frequent_words_with_mismatches.py  E01J_frequent_words_mismatches_reverse_complements.py  E01K_frequency_array.py  E01L_pattern_to_number.py  E01M_number_to_pattern.py
ch01/tests/: rosalind_ba1a.txt  rosalind_ba1f.txt  rosalind_ba1g.txt  rosalind_ba1i.txt  rosalind_ba1j.txt  rosalind_ba1k.txt  rosalind_ba1l.txt  rosalind_ba1m.txt
cpp/: CMakeLists.txt  utils.cpp  utils.h
cpp/ch01/: E01A_pattern_count.cpp  E01A_pattern_count.h  E01B_frequent_words.cpp  E01B_frequent_words.h  E01C_reverse_complement.cpp  E01C_reverse_complement.h  E01D_pattern_matching.cpp  E01D_pattern_matching.h  E01E_clump_finding.cpp  E01E_clump_finding.h  E01F_minimum_skew.cpp  E01F_minimum_skew.h  E01G_hamming_distance.cpp  E01G_hamming_distance.h  E01H_approximate_pattern_matching.cpp  E01H_approximate_pattern_matching.h  E01I_frequent_words_mismatches.cpp  E01I_frequent_words_mismatches.h  E01J_frequent_words_mismatches_reverse_complements.cpp  E01J_frequent_words_mismatches_reverse_complements.h  E01K_frequency_array.cpp  E01K_frequency_array.h  E01L_pattern_to_number.cpp  E01L_pattern_to_number.h  E01M_number_to_pattern.cpp  E01M_number_to_pattern.h  E01N_d_neighborhood.cpp  E01N_d_neighborhood.h
cpp/ch02/: E02A_motif_enumeration.cpp  E02A_motif_enumeration.h  E02B_median_string.cpp  E02B_median_string.h  E02C_profile_most_probable_kmer.cpp  E02C_profile_most_probable_kmer.h  E02D_greedy_motif_search.cpp  E02D_greedy_motif_search.h  E02E_greedy_motif_search_pseudocounts.cpp  E02E_greedy_motif_search_pseudocounts.h  E02H_distance_pattern_strings.cpp  E02H_distance_pattern_strings.h
py/: dictionaries.py  utils.py
py/ch01/: E01A_pattern_count.py  E01B_frequent_words.py  E01C_reverse_complement.py  E01D_pattern_matching.py  E01E_clump_finding.py  E01G_hamming_distance.py  E01H_approximate_pattern_matching.py  E01I_frequent_words_mismatches.py  E01I_frequent_words_with_mismatches.py  E01J_frequent_words_mismatches_reverse_complements.py  E01K_frequency_array.py  E01L_pattern_to_number.py  E01M_number_to_pattern.py  E01N_d_neighborhood.py
py/ch02/: E02A_motif_enumeration.py  E02B_median_string.py  E02C_profile_most_probable_kmer.py  E02D_greedy_motif_search.py  E02E_greedy_motif_search_pseudocounts.py  E02F_randomized_motif_search.py  E02G_gibbs_sampler.py  E02H_distance_patterns_strings.py
py/ch03/: E03A_string_composition.py  E03B_string_reconstruction.py  E03C_overlap_graph.py  E03D_de_brujin_string.py  E03E_de_brujin_collection.py  E03F_euler_cycle.py  E03G_euler_path.py  E03H_string_reconstruction.py  E03I_k_universal_circular_string.py  E03J_read_pairs_string_reconstruction.py  E03K_generate_contigs.py  E03L_gapped_genome_path.py  E03M_max_nonbranching_paths.py
py/ch04/: E04A_protein_translation.py  E04B_peptide_encoding.py  E04C_generate_theoretical_spectrum.py  E04D_counting_peptides_given_mass.py  E04E_peptide_sequencing.py  E04F_cyclopeptide_scoring.py  E04G_leaderboard_cyclopeptide_sequencing.py  E04H_spectral_convolution.py  E04I_convolution_cyclopeptide_sequencing.py  E04J_linear_spectrum_string.py  E04K_linear_peptide_score.py  E04L_leaderboard_trimming.py  E04M_turnpike_problem.py
py/ch05/: E05A_change_problem.py  E05B_manhattan_tourist_problem.py  E05C_LCS_problem.py  E05D_DAG_longest_path.py  E05E_global_alignment.py  E05F_local_alignment.py  E05G_edit_distance.py  E05H_fitting_alignment.py  E05I_overlap_alignment.py  E05J_affine_gap_penalties.py  E05K_middle_edge_linear_space.py  E05L_linear_space_alignment.py  E05M_multiple_lcs.py  E05N_topological_ordering.py
py/ch06/: E06A_greedy_sorting.py  E06B_breakpoints_count.py  E06C_two_break_distance.py  E06D_two_break_sorting.py  E06E_shared_kmers.py  E06F_chromosome_to_cycle.py  E06G_cycle_to_chromosome.py  E06H_colored_edges.py  E06I_graph_to_genome.py  E06J_two_break_genome_graph.py  E06K_two_break_genome.py
tests/: rosalind_ba1b.txt  rosalind_ba1c.txt  rosalind_ba1d.txt  rosalind_ba1e.txt  rosalind_ba1n.txt  rosalind_ba2a.txt  rosalind_ba2e.txt  rosalind_ba2f.txt  rosalind_ba3a.txt  rosalind_ba3b.txt
tests/ch01/: test_E01A_pattern_count.py  test_E01B_frequent_words.py  test_E01C_reverse_complement.py  test_E01D_pattern_matching.py  test_E01E_clump_finding.py  test_E01F_minimum_skew.py  test_E01G_hamming_distance.py  (+7 more)
(+90 files in other folders)
